[package]
name = "freqiterator"
version = "3.0.0"
edition = "2021"
description = "A simple no-dep lib for note frequency iterators."
license = "Unlicense"
repository = "https://github.com/p6nj/freqiterator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.6.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
